syntax = "proto3";
package quichx;

message FtsAccount {
  string id = 1;
  string phone = 2;
}